k8s/base/static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: static
  name: static
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: static
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: static
    spec:
      containers:
        - image: nginx:alpine
          name: static
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: static-cm0
              readOnly: true
      restartPolicy: Always
      volumes:
        - configMap:
            name: static-cm0
          name: static-cm0
