k8s/base/new-wordpress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfeed-wp
  namespace: default
  labels:
    app: mfeed-wp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: mfeed-wp
  template:
    metadata:
      labels:
        app: mfeed-wp
    spec:
      serviceAccountName: wordpress-sa
      securityContext:
        fsGroup: 33
      containers:
        - name: wordpress
          image: wordpress:6.6-php8.2-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-content
              mountPath: /var/www/html/wp-content
            - name: wp-config
              mountPath: /var/www/html/wp-config.php
              subPath: wp-config.php
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
          args:
            - "--port=3306"
            - "--structured-logs"
            - "mfeed-web-staging:asia-northeast1:mfeed-web-wordpress"
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: wp-content
          persistentVolumeClaim:
            claimName: wp-content-pvc
        - name: wp-config
          configMap:
            name: wp-config
            items:
              - key: wp-config.php
                path: wp-config.php

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
  labels:
    app: mfeed-wp
spec:
  type: ClusterIP
  selector:
    app: mfeed-wp
  ports:
    - name: http
      port: 80
      targetPort: 80
