k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mfeed-wordpress-svc
  labels:
    app: www-mfeed-ad-jp-wordpress
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default":"mfeed-wordpress-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: www-mfeed-ad-jp-wordpress
  ports:
    - name: http
      port: 80
      targetPort: http
