k8s/base/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
spec:
  selector:
    io.kompose.service: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
